--- a/topology_es5.html
+++ b/topology_es5.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="renderer" content="webkit"/>
-    <title>topolofy-es5</title>
+    <title>topology-es5</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -977,7 +977,7 @@
 <script src="./plugins/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
 <script src="./plugins/topology/topology.bundle.js"></script>
 
-<script src="./topology/topolofy_es5.js"></script>
+<script src="topology/topology_es5.js"></script>
 
 </body>
 </html>
